[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "functional-language-features", 
  "adder",
  "smart-pointers",
  "fearless-concurrency",
  "object-oriented",
  "patterns-matching",
]

